--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
-    <!-- Include any additional CSS or meta tags here -->
-</head>
-<body>
-    <main>
-        <h1>{{ page.title }}</h1>
-        <p>{{ page.description }}</p>
+---
+layout: default
+---
 
-        <!-- Optionally, you can still display a download link or message if desired -->
-        <p>If the PDF does not open automatically, <a href="{{ site.baseurl }}/assets/pdf/{{ page.cv_pdf }}" target="_blank">click here to view the PDF</a>.</p>
-    </main>
-    
-    <!-- JavaScript to automatically open the PDF -->
-    <script>
-        window.onload = function() {
-            var pdfUrl = "{{ site.baseurl }}/assets/pdf/{{ page.cv_pdf }}";
-            window.open(pdfUrl, '_blank');
-        };
-    </script>
-</body>
-</html>
+<!-- Page-specific content -->
+<div class="container mt-5" role="main">
+  <h1>{{ page.title }}</h1>
+  <p>{{ page.description }}</p>
+</div>
+
+<!-- JavaScript to automatically open the PDF -->
+<script>
+    window.onload = function() {
+        var pdfUrl = "{{ site.baseurl }}/assets/pdf/{{ page.cv_pdf }}";
+        window.open(pdfUrl, '_blank');
+    };
+</script>
